--- a/chapter_conclusions.tex
+++ b/chapter_conclusions.tex
@@ -1,14 +1,14 @@
 \chapter{Conclusions and outlook}
 
 \sloppy
-As the idea of positive residues inside the cytoplasm emerged during the late 1980s, so did the idea of negative residues working in concert with~\gls{tmh} orientation.
+As the evidence of positive residues preferentially localising to the inside the cytoplasm emerged during the late 1980s \cite{VonHeijne1989}, so did the idea of negative residues working in concert with the positive residues for~\gls{tmh} orientation.
 It was shown that removing a single lysine residue reversed the topology of a model \textit{E. coli} protein, whereas much higher numbers of negatively charged residues are needed to reverse topology~\cite{Nilsson1990}.
-Furthermore, there was no conclusive evidence in the literature for an opposing negatively charged skew~\cite{Granseth2005, Nilsson2005a, Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
+However, there was no conclusive evidence in the literature for an opposing negatively charged skew~\cite{Granseth2005, Nilsson2005a, Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
 Yet these previous studies in various ways did not account for the rarity of the negatively charged residues relative to the more abundant residues.
 In \textit{E. coli} negative residues do experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant~\cite{Ismail2015}, and as mentioned, they did to an extent have the ability to reverse topology \cite{Nilsson1990}.
 In this thesis, we have demonstrated that the ``negative\--outside'' skew exists in anchoring~\gls{tmh}s.
 Additionally, we have made observations regarding how anchoring \gls{tmh}s are optimised to their membranes.
-This new insight into the behaviour of \gls{tmh}s will not only help us understand specific cases in biology, but can also inform synthetic biology regarding \gls{tmp}s.
+This new insight into the behaviour of \gls{tmh}s will not only help us understand specific cases in biology, but can also inform synthetic biology regarding \gls{tmp}s \cite{Kang2018, Findlay2017, Lu2018}.
 
 Post\--translationally inserted \gls{ta} proteins integrate into the membrane independently of the co\--translational ribosome\--translocon complex insertion machinery.
 They are also of interest as a liposome drug delivery system due to the role of \gls{ta} \gls{snare} proteins in membrane fusion \cite{Ungar2003, Allen2013, Nordlund2014}.
@@ -20,10 +20,10 @@ Still, several important questions remain unanswered that limit our understandin
 How truly redundant are the different pathways?
 What are the precise biophysical and biological signatures of \gls{ta} proteins that determine their path?
 Why do some post-translationally inserted \gls{ta} proteins have C-terminal tail lengths exceeding the traditional 25 residue length, whereas other proteins with far shorter tails than this cut-off are co-translationally inserted?
-Ultimately, for these questions to be more thoroughly answered, as we have demonstrated, annotation of the protein databases must be completed.
+Ultimately, as we have demonstrated, annotation of the protein databases must be completed for these questions to be more thoroughly answered.
 
-Whilst we have identified amphipathic \gls{tmh}s that may contribute to the spontaneous insertion of some \gls{ta} proteins, \gls{md} simulations of the interactions between the membrane and the anchoring \gls{tmh} of spontaneously inserting \gls{ta} proteins would be needed to reveal the molecular energetic contributions involved in the spontaneous insertion.
-
+We have identified amphipathic \gls{tmh}s that may contribute to the spontaneous insertion of some \gls{ta} proteins.
+However, \gls{md} simulations of the interactions between the membrane and the anchoring \gls{tmh} of spontaneously inserting \gls{ta} proteins would be needed to reveal the molecular energetic contributions involved in the spontaneous insertion.
 
 The biological scale of hydrophobicity revealed that many \gls{tmh}s do not make the energetic requirements of insertion by the translocon \cite{Hessa2007}.
 It is now understood that these so\--called marginally hydrophobic \gls{tmh}s rely on sequence context for correct topology \cite{Ojemalm2012} and efficient insertion \cite{Hedin2010, Junne2017, Virkki2014}.
@@ -33,10 +33,11 @@ It remains unclear as to what extent the newly discovered role of the \gls{emc} 
 
 Understanding cooperative \gls{tmh} insertion and the integration of marginally hydrophobic \gls{tmh}s will require a much more thorough understanding of the temporal and energetic aspects of the process.
 It appears that the relatively new technologies of single molecule \gls{em} and \gls{ap}s may be able to grant insight into the energetics and dynamics of the structures throughout the process of \gls{tmp} integration.
-Understanding the relationship \gls{tmh}s have with one another is critical for developing complex synthetic \gls{tmp}s.
+Understanding the relationship \gls{tmh}s have with one another, particularly the temporal and spacial contextualisation, is critical for developing complex synthetic \gls{tmp}s.
 
 More generally, there are several challenges still facing our understanding of \gls{tmp}s.
-The description of a~\gls{tmh} remains incomplete; it remains difficult to interpret the role of a \gls{tmh} in the membrane beyond anchoring.
+The description of a~\gls{tmh} remains incomplete.
+Therefore, it remains difficult to interpret the role of a \gls{tmh} in the membrane beyond anchoring.
 Furthermore, the prediction of~\gls{tmp} topology is often erroneous and requires experimental validation.
 Despite a wealth of structures the general model of helix\--helix and helix\--lipid interactions remains speculative and requires intensive analysis to generate a working model of a particular~\gls{tmp}.
 Nevertheless, progress is being made in our general understanding of \gls{tmp}s.
