--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -1,5 +1,8 @@
 \chapter{Sequence analysis of polarity in transmembrane helices suggests that translocation of marginally hydrophobic helices could be facilitated by neighbouring typically hydrophobic helices}
 \chaptermark{Sequence analysis of polarity...}
+
+\sloppy
+
 \section{Abstract}
 
 Marginally hydrophobic transmembrane helices perform a variety of essential for life intra-membrane molecular biochemistry.
@@ -437,7 +440,7 @@ The preceding step is weaker, and the proceeding step is greater throughout the 
 A similar step change is found between TMH9 and TMH10 (P\--value = 3.02E-13) and TMH10 to TMH11 (P\--value = 5.51E-44), TMH15 to TMH16 (P\--value = 1.79E-23), TMH16 to TMH17 (P\--value = 1.67E-27), TMH21 to TMH22 (P\--value = 1.64E-9), and TMH22 to TMH23 (P\--value = 3.42E-31).
 
 As a trend, the TMSOC  z\--score was not sensitive to detecting function in the extremely hydrophobic TMH4 (Figure \ref{fig:Ion-channel-information-entropy}).
-This is due to the other component of the  z\--score, the sequence information entropy \cite{Wong2011, Wong2012}.
+This is due to the other component of the  z\--score, the sequence information entropy from SEG \cite{Wootton1996, WOOTTON1994269, Wong2011, Wong2012}.
 The relative probability of a polar/charged residue is so high in TMH4 that it apparently has the same expectancy as the hydrophobic residues, and the ``simple'' entropy mutes somewhat the effect of the extreme hydrophobicity.
 This is compounded by the fact that the White and Wimley scale (used to generate the  z\--score) is already less sensitive to the relative polarity difference between TMH3 and TMH4 than the Kyte \& Doolittle scale (Figure \ref{fig:KD-ion-channels}A, Figure \ref{fig:ion-channel-hydrophobicity-verification}A).
 
@@ -453,7 +456,7 @@ This is compounded by the fact that the White and Wimley scale (used to generate
 \end{figure}
 
 
-\subsection{The prevalence of the high hydrophobic discrepancy of transmembrane helices amongst other common ``transporter'' transmembrane protein classes}
+\subsection{The prevalence of the high hydrophobic discrepancy of transmembrane helices amongst other common `transporter' transmembrane protein classes}
 
 Whilst the gene ontology recognises ``transporters'' as having disproportionately more highly different hydrophobic sequential pairs, the list is predominantly ion channels, which are molecularly and functionally different from ion transporters.
 It also appears that ion transporters have no conserved hydrophobicity discrepancy between any of their \gls{tmh}s for the 4TMH, 6TMH, 8TMH, or 10TMH classes (Figure \ref{fig:other-groups-good-bad} C, D, E, F, G).
@@ -509,9 +512,10 @@ The hydrophobic relationships between these cooperatively inserted \gls{tmh}s ma
 So far, this method has shown that the TMH7 of \gls{gpcr}s is a conserved marginally hydrophobic \gls{tmh} with the typically hydrophobic TMH6 preceding it.
 In opsins, TMH5\--TMH7 are incorporated into the membrane together simultaneously by staying in association with the translocon until TMH7 emerges \cite{Ismail2008}.
 We see this pattern across several \gls{gpcr} sub\--families and the \gls{gpcr} family as a whole.
+
 Furthermore, we found that the charged TMH4 of 6TMH ion channels has a typically hydrophobic TMH3 preceding it and a more hydrophobic TMH5 following it.
 Indeed there is evidence that TMH3 and TMH4 cannot incorporate alone \cite{Sato2003}, that TMH3 and TMH4 can insert as a pair from the translocon simultaneously \cite{Zhang2007, Cymer2015}.
 
 Advanced cross\--linking experiments, single molecule cryo\gls{em}, and \gls{ap}s can probe energetics and \gls{tmh}\--\gls{tmh} interactions and associations dynamically during ribosomal translation and membrane insertion.
 These methods could explore the \gls{tmh}\--\gls{tmh} relationships such as cooperation during insertion in more detail with temporal contextualisation.
-Understanding the biogenesis of \gls{tmp}s is essential to solving misfolding in disease phenotypes, and for developing viable \gls{tmp} chassis in synthetic biology \cite{Kang2018, Lu2018}.
+Understanding the biogenesis of \gls{tmp}s is essential to solving misfolding in disease phenotypes, and for developing viable \gls{tmp} chassis in synthetic biology \cite{Kang2018}.
