missing reftables added, citations put into title case, some typos

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -60,7 +60,7 @@ Membrane\--bound proteins underpin almost every biological process directly, or 
 Integral \gls{tmp}s are encoded by between a third to a half of the genes in the human genome~\cite{Hopkins2002, Almen2009, Wang2013} and account for 40\% of drug targets \cite{Overington2006} which reflects their biological and physiological importance.
 \gls{tmp}s allow biochemical pathways that traverse the various biological membranes used in life, either by transporting molecules or transducing signals across the bilayer.
 Misfolding of these proteins during the complex process of translocation is common in both normal and diseased cells \cite{Ruggiano2014}.
-The mechanisms of folding are actively studied even recently revealing new systems of translocation, such as the role of the \gls{emc} in both co\--translational \cite{Shurtleff2018} and post\--translational \cite{Guna2018} \gls{tmp} integration.
+The mechanisms of folding are actively studied even recently revealing new systems of translocation, such as the role of the \gls{emc} in both co\--translational \cite{Shurtleff2018} and post\--translational \cite{Guna2018a} \gls{tmp} integration.
 Mutations tend to cluster in the \gls{tmh} regions of the genes \cite{Sanders2004}, which can cause the misfolding.
 Glycine to arginine mutations occur statistically more frequently in \gls{tmh}s compared to their globular $\alpha$\--helix counterparts \cite{Partridge2002}.
 This can result in a range of diseases including but not limited to: cystic fibrosis caused by mutations in the cystic fibrosis conductance regulator \cite{Riordan1989}, Charcot\--Marie\---Tooth disease caused by mutations in the PMP22 gene \cite{Roa1993} and the connexin 32 gene \cite{Fairweather1994}, diabetes insipidus caused by mutations in the aquaporin 2 water channel \cite{vanLieburg1994}, retinitis pigmentosa caused by a point mutation in rhodopsin \cite{Dryja1990}, and Niemann\--Pick disease for which there are over 200 disease\--causing mutations identified \cite{Gelsthorpe2008, Park2003, Scott2004, Fernandez-Valero2005}.
@@ -484,10 +484,10 @@ As the ribosome binds with the translocon and the signal sequence is released \c
 During translocation the plug exits the pore, the constriction ring is opened, and a lateral gate opens between TMH2 and TMH3, and TMH7 and TMH8 to integrate hydrophobic stretches of nascent peptide into the membrane~\cite{Berg2004, Petriman2018, Hizlan2012, Bischoff2014, Gogala2014, Egea2010, Niesen2018, VandenBerg2004} (Figure \ref{fig:Translocon}).
 Mutation experiments on these three features (the plug, constriction ring, and lateral gate) destabilised the closed state of the translocon and resulted in a protein localisation phenotype that suppressed inactivating mutations in signal sequences~\cite{Emr1981, Veenendaal2004, Li2007, Junne2007} and even caused transient channel openings in bacteria~\cite{Saparov2007}.
 
-The \gls{emc} can act as a post\--translational \gls{ta} protein insertase \cite{Guna2018}.
+The \gls{emc} can act as a post\--translational \gls{ta} protein insertase \cite{Guna2018a}.
 Recently it was shown that the \gls{emc} was also able to act cooperatively with the Sec translocon during cotranslational insertion on a subset of multipass \gls{tmp}s in both yeast and human cells \cite{Shurtleff2018}.
 Proximity specific ribosome profiling in yeast confirmed that the \gls{emc} engages the translocating multipass \gls{tmp}s, especially those containing charged residues in the \gls{tmh}.
-This would explain why it also interacts with \gls{ta} protein \gls{tmh}s \cite{Guna2018, Shurtleff2018}.
+This would explain why it also interacts with \gls{ta} protein \gls{tmh}s \cite{Guna2018a, Shurtleff2018}.
 Pulldown experiments revealed that the \gls{emc} stabilised the synthesised \gls{tmp}s and recruited chaperones (both substrate specific and general) that allowed unstable \gls{tmp}s to achieve viable conformations allowing function in the \gls{er} and transport to the Golgi \cite{Shurtleff2018}.
 In the absence of the \gls{emc}, UPS (a proteasome) degrades the membrane proteins \cite{Shurtleff2018}.
 This dual function of the \gls{emc} is analogous with YidC \cite{Shurtleff2018} in bacteria which has the role of an insertase \cite{Samuelson2000, Drew2003, Dalbey2014} as well as interacting with SecYEG to stabilise translocated \gls{tmp}s \cite{Nagamori2004}.
