--- a/thesis.tex
+++ b/thesis.tex
@@ -77,7 +77,7 @@
 \author{James Alexander Baker}
 \orcid{orcid.org/0000\--0003\--0874\--2298}
 \faculty{Science and Engineering}
-\def\wordcount{63,689}
+\def\wordcount{47,705}
 
 
 % Uncomment the line below to suppress the `List of Tables' page (optional)
@@ -153,16 +153,14 @@ These findings will provide insight into the causes of some genetic diseases as 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
 \prefacesection{Acknowledgements}
 I would like to thank all members of both the Eisenhaber research group, as well as the Curtis and Warwicker research group for their interesting and engaging discussions throughout my PhD.
-In particular I would like to acknowledge the patience, guidance, and exceptional supervision from Dr Jim Warwicker of the University of Manchester as well as Dr Frank Eisenhaber and Dr Birgit Eisenhaber from the Singapore Bioinformatics Institute.
+In particular, I would like to acknowledge the patience, direction, and exceptional supervision from Dr Jim Warwicker of the University of Manchester along with Dr Frank Eisenhaber and Dr Birgit Eisenhaber from the Singapore Bioinformatics Institute.
 I also express my gratitude towards Dr Wing Cheong Wong and Dr Max Hebditch for working with me on many fiddly problems.
 I would also like to thank my advisor, Professor Stephen High, for his stimulating discussions and guidance throughout the project.
+
 I also thank the University of Manchester and the ARAP programme at the A*STAR for funding the project.
 
-I thank my mother, father, my brother Tim, and Emily for their unwavering support of me in undertaking a PhD based for two years on the otherside of the planet.
+I thank my parents Janet and Martin, my brother Tim, and my partner Emily for their unwavering support of me in undertaking a PhD based for two years on the other side of the planet.
 Being so far from my family and loved ones was certainly the most challenging part of this process.
-
-%It was my uncle Howard's wisdom and philosophical outlook that swayed me to undertake a PhD.
-%May he rest in peace.
 
 % \prefacesection{The Author}
 
