--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -1,8 +1,8 @@
 \chapter{The ``negative-outside'' rule}
 \sloppy
 
-The work presented in this chapter is a version of published work presented in Baker \textit{et al.,} 2017 titled `Charged residues next to transmembrane regions revisited: ``Positive\--inside rule'' is complemented by the ``negative inside depletion/outside enrichment rule''' by James Alexander Baker, Wing\--Cheong Wong, Birgit Eisenhaber, Jim Warwicker, and Frank Eisenhaber~\cite{Baker2017}.
-Here we include the supplementary information in the text.
+The work presented in this chapter is published work presented in Baker \textit{et al.,} 2017 titled `Charged residues next to transmembrane regions revisited: ``Positive\--inside rule'' is complemented by the ``negative inside depletion/outside enrichment rule''' by James Alexander Baker, Wing\--Cheong Wong, Birgit Eisenhaber, Jim Warwicker, and Frank Eisenhaber~\cite{Baker2017}.
+Here we include the supplementary tables and figures in the text.
 
 \section{Summary}
 
@@ -485,7 +485,7 @@ Prolines are only suppressed in the~\gls{tmh} itself and are not suppressed in t
 \subsection{Hydrophobicity and leucine distribution in transmembrane helices in single- and multi-pass proteins}
 
 Generally, we see in Figure \ref{fig:comp_heatmaps} that compositional biases appear more extreme in the single-pass case, particularly when it comes to polar and non-polar residues being more heavily suppressed and enriched.
-To investigate this observation, we calculated the hydrophobicity at each sequence-position averaged over all~\gls{tmh}s considered (after having window-averaged over 3 residues for each~\gls{tmh}) using the Kyte \& Doolittle hydrophobicity scale~\cite{Kyte1982} (Figure~\ref{fig:hydrophobicity_single_multi}A) and validated using White and Wimley octanol-interface whole residue scale~\cite{White1999}, Hessa’s biological hydrophobicity scale~\cite{Hessa2005}, and the Eisenberg hydrophobic moment consensus scale~\cite{Eisenberg1984} (Supplementary Figure~\ref{fig:hydrophobicity_scale_comparison}).
+To investigate this observation, we calculated the hydrophobicity at each sequence-position averaged over all~\gls{tmh}s considered (after having window-averaged over 3 residues for each~\gls{tmh}) using the Kyte \& Doolittle hydrophobicity scale~\cite{Kyte1982} (Figure~\ref{fig:hydrophobicity_single_multi}A) and validated using White and Wimley octanol-interface whole residue scale~\cite{White1999}, Hessa’s biological hydrophobicity scale~\cite{Hessa2005}, and the Eisenberg hydrophobic moment consensus scale~\cite{Eisenberg1984} (Figure~\ref{fig:hydrophobicity_scale_comparison}).
 The total set of~\gls{tmh}s was split into 15 sets of membrane-spanning proteins (1 set containing single-pass proteins, 13 sets each containing~\gls{tmh}s from 2-, 3-, 4-\ldots 14-\gls{tmp}s and another of~\gls{tmh}s from proteins with 15 or more~\gls{tmh}s).
 In Figure~\ref{fig:hydrophobicity_single_multi}B, we show the P\--value at each sequence position by comparing the respective values from multi-pass and single-pass~\gls{tmh}s using the 2-sample t-test (Figure \ref{fig:hydrophobicity_single_multi}B).
 Strikingly, the inside flank of the single-pass~\gls{tmh}s is much more hydrophilic (e.g., see the Kyte \& Doolittle score=-1.3 at position -18) than that of multi-pass~\gls{tmh}s (P\--value=5.64e-103 at position -14).
