removed odd introduction wording

--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -1,7 +1,7 @@
 \chapter{The ``negative-outside'' rule}
 \sloppy
 
-The work presented in this chapter is published work presented in Baker \textit{et al.,} 2017 titled `Charged residues next to transmembrane regions revisited: ``Positive\--inside rule'' is complemented by the ``negative inside depletion/outside enrichment rule''' by James Alexander Baker, Wing\--Cheong Wong, Birgit Eisenhaber, Jim Warwicker, and Frank Eisenhaber~\cite{Baker2017}.
+The research presented in this chapter is published work presented in Baker \textit{et al.,} 2017 titled `Charged residues next to transmembrane regions revisited: ``Positive\--inside rule'' is complemented by the ``negative inside depletion/outside enrichment rule''' by James Alexander Baker, Wing\--Cheong Wong, Birgit Eisenhaber, Jim Warwicker, and Frank Eisenhaber~\cite{Baker2017}.
 Here we include the supplementary tables and figures in the text.
 
 \section{Summary}
