added para break to make first intro read more smoothly

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -1,17 +1,18 @@
 \chapter{Introduction}
 \sloppy
-\gls{tm} biology is a huge and varied field that is ultimately the study of the interface between compartments of the cell.
+Membrane biology is a huge and varied field that is ultimately the study of the interface between compartments of the cell.
 The \gls{tmp} group include some of the most critical to life proteins as well as a large number of drug targets.
 However, the experimental inaccessibility of the \gls{tmh} has hampered the progress of study compared to their globular structural analogues.
 Despite progress over the last decade, the understanding of the relationship between the sequence and function of a \gls{tmh} is incomplete.
 
-In this chapter we will place the \gls{tmh} problem in context, discuss some of the tools and methods that allow us then describe and analyse the \gls{tmh}s, describe the important biological aspects of the \gls{tmh}, and discuss other membrane spanning protein segments.
+In this chapter we will place the \gls{tmh} problem in context, discuss some of the tools and methods that allow us to analyse the \gls{tmh}s, describe the important biological aspects of the \gls{tmh}, and discuss other membrane spanning protein segments.
 
 \section{Transmembrane proteins}
 
 \subsection{A brief history of the discovery and exploration of the transmembrane proteins}
 
 Due to the ability to segregate biochemical environments, the cellular barrier and resultant compartmentalisation has been described as one of the fundamental pillars of life as we know it~\cite{Ladokhin2015, Koshland2002}.
+
 The significance of the cellular barrier was first noted in 1665 with the dawn of the microscope, when Robert Hooke described the cell wall of the cork plant (Figure \ref{fig:history}A), with the clear distinction of the barrier giving rise to the term ``cell'' \cite{Donaldson2010, hooke1961micrographia}.
 
 %Some waffle about Hooke, Schwan, and Virchow
