--- a/thesis.tex
+++ b/thesis.tex
@@ -74,9 +74,9 @@
 \sloppy
 
 \title{Investigating the Recognition and Interactions of Non-Polar \(\alpha\) Helices in Biology}
-\author{James Alexander Baker}
+\author{James A. Baker}
 \school{Chemistry}
-\orcid{orcid.org/0000\--0003\--0874\--2298}
+%\orcid{orcid.org/0000\--0003\--0874\--2298}
 \faculty{Science and Engineering}
 \def\wordcount{47,705}
 
